# metellus

./: CLAUDE.md  CMakeLists.txt  README.md  demo.py  pyproject.toml  runner.py  sandbox.py  todo.txt
docs/: kernel_style.md
scripts/: bench.sh  setup.sh  test.sh
src/: metal_backend.mm
src/api/: __init__.py  run.py
src/compute/: __init__.py  fragments.py  scaffold.py
src/compute/copy/: __init__.py  copy.py
src/compute/elementwise/: __init__.py  elementwise.py  tiled_chain.py
src/compute/init/: __init__.py  init.py
src/compute/matmul/: __init__.py  config.py  matmul.py
src/compute/reduction/: __init__.py  reduction.py
src/memory/: __init__.py  memory.py
src/orchestrator/: __init__.py  aliasing.py  assembly.py  builder.py  dag.py  fusion.py  graph.py  ir.py  kernel_group.py  scheduler.py
src/orchestrator/assembly/: __init__.py  chain_tiles.py  decision.py  elementwise.py  expressions.py  extras.py  load_geometry.py  matmul.py  multi_anchor.py  reduction.py  shape.py
src/runtime/: __init__.py  buffer.py  program.py
src/shape/: __init__.py  reshape.py
tests/: bench_elementwise.py  bench_init.py  bench_matmul.py  bench_reduction.py  test_builder.py  test_dag.py  test_fusion.py  test_fusion_budget.py  test_graph.py  test_reshape.py  test_scalar_operands.py  test_scheduler.py  test_shape_transforms.py  test_tensor_metadata.py
